--- a/Demo/WFDataSourceDemo/Cell/DemoCell_XIB.xib
+++ b/Demo/WFDataSourceDemo/Cell/DemoCell_XIB.xib
@@ -1,19 +1,47 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DemoCell_XIB">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="88" id="KGk-i7-Jjw" customClass="DemoCell_XIB">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="88"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="43"/>
+                <frame key="frameInset" width="320" height="87"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GNn-7A-mty">
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oda-Z2-iiw">
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="oda-Z2-iiw" firstAttribute="top" secondItem="GNn-7A-mty" secondAttribute="bottom" constant="8" id="N1y-E1-vDr"/>
+                    <constraint firstItem="oda-Z2-iiw" firstAttribute="trailing" secondItem="GNn-7A-mty" secondAttribute="trailing" id="NtM-hI-pcO"/>
+                    <constraint firstItem="oda-Z2-iiw" firstAttribute="leading" secondItem="GNn-7A-mty" secondAttribute="leading" id="Q2g-fQ-zDD"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="GNn-7A-mty" secondAttribute="trailing" id="VPV-l6-U72"/>
+                    <constraint firstItem="GNn-7A-mty" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="auk-mt-sme"/>
+                    <constraint firstItem="GNn-7A-mty" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="cbH-xw-KVo"/>
+                    <constraint firstAttribute="bottom" secondItem="oda-Z2-iiw" secondAttribute="bottom" constant="10" id="vY5-8n-9n6"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="infoLabel" destination="oda-Z2-iiw" id="aEP-s5-cVz"/>
+                <outlet property="titleLabel" destination="GNn-7A-mty" id="iSF-dY-ptQ"/>
+            </connections>
+            <point key="canvasLocation" x="34" y="76"/>
         </tableViewCell>
     </objects>
 </document>
